# kampala

./: README.md  gen_doc.sh  install.sh  ssh_setup.sh
Kampala/: CMakeLists.txt  package.xml
analysis/: CMakeLists.txt  package.xml  setup.py
analysis/bagfiles/: iris1.txt
analysis/scripts/: bag_reader.py  trigger.py  utils.py
analysis/srv/: Trigger.srv
controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
controller/launch/: circle.launch  circle.launch~  follower.launch  hover.launch  hover.launch~  hovering.launch  outofbound.launch  straight_line.launch
controller/msg/: Permission.msg  PlotData.msg  Pos.msg  QuadState.msg  RCInput.msg
controller/rviz_config/: trajectory_following.rviz
controller/scripts/: Obstacle1.py  PID_controller.py  blender.py  (+26 more)
developers_guide/: developers_guide.tex
docker/: CMakeLists.txt  package.xml  setup.py
gui/: CMakeLists.txt  LACPlugin.xml  RCDisplay.xml  README.md  package.xml  plugin.xml  pointInput.xml  rqt_iris.xml  stepPlugin.xml  utility.xml
kampala/: CMakeLists.txt  README.md  package.xml
mocap/: CMakeLists.txt  README.md  package.xml  setup.py  signal_filtering.py
pid/: CMakeLists.txt  autotuner.xml  package.xml  setup.py
presentation/: presentation.odp  presentation_keywords.txt
raspberrypi/: README  README.md  connect.launch  mavros_launch.sh  rc.local  wifi_respawn.sh
scenarios/: CMakeLists.txt  package.xml
simulator/: CMakeLists.txt  README.md  package.xml  setup.py
summer/: CMakeLists.txt  package.xml  setup.py
trajectory_generator/: CMakeLists.txt  package.xml  setup.py
(+179 files in other folders)
