<package>
  <name>kampala</name>
  <version>1.0.0</version>
  <description>Kampala</description>
  <maintainer email="rousse@kth.se">Paul Rousse</maintainer>

  <license>ASL 2.0</license>

  <url type="website">http://kth.se</url>

  <author>SML</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>analysis</run_depend>
  <run_depend>controller</run_depend>
  <run_depend>mocap</run_depend>
  <run_depend>scenarios</run_depend>
  <run_depend>simulator</run_depend>
  <run_depend>trajectory_generator</run_depend>
  <run_depend>gui</run_depend>
  <run_depend>pid</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
